2002-01-19  Joseph S. Myers  <jsm28@cam.ac.uk>

	* backgammon/common_source/Makefile.bsd,
	backgammon/teachgammon/Makefile.bsd, boggle/mkdict/Makefile.bsd,
	boggle/mkindex/Makefile.bsd, canfield/cfscores/Makefile.bsd,
	fortune/datfiles/netbsd, fortune/fortune/fortune.c,
	fortune/unstr/Makefile.bsd, morse/Makefile.bsd, number/number.6,
	phantasia/Makefile.bsd, ppt/Makefile.bsd, primes/Makefile.bsd,
	snake/snscore/Makefile.bsd, wtf/acronyms: Update from NetBSD CVS.

	* hangman/main.c: Include <err.h>.

	* hangman/extern.c, hangman/getword.c, hangman/hangman.6.in,
	hangman/hangman.h, hangman/main.c: Allow minimum word length to be
	set on the command line.  Patch from Joey Hess <joeyh@debian.org>.
	* COPYING: Update.

2001-12-29  Joseph S. Myers  <jsm28@cam.ac.uk>

	* phantasia/Makefrag (phantasia_install): Use $(INSTALL_PREFIX)
	when copying score files.  Patch from Joey Hess
	<joeyh@debian.org>.
	* AUTHORS, THANKS: Update email address for Joey Hess.  Patch from
	Joey Hess <joeyh@debian.org>.

2001-12-08  Joseph S. Myers  <jsm28@cam.ac.uk>

	* battlestar/fly.c, cribbage/crib.c, fortune/datfiles/fortunes2,
	fortune/datfiles/fortunes2-o.real, hangman/setup.c, mille/mille.c,
	phantasia/Makefile.bsd, phantasia/main.c, robots/main.c,
	rogue/init.c, sail/pl_7.c, worm/worm.c, wtf/acronyms: Update from
	NetBSD CVS.

2001-11-18  Joseph S. Myers  <jsm28@cam.ac.uk>

	* wtf/acronyms: Update from NetBSD CVS.

	* battlestar/com1.c: Rename to battlestar/command1.c.
	* battlestar/com2.c: Rename to battlestar/command2.c.
	* battlestar/com3.c: Rename to battlestar/command3.c.
	* battlestar/com4.c: Rename to battlestar/command4.c.
	* battlestar/com5.c: Rename to battlestar/command5.c.
	* battlestar/com6.c: Rename to battlestar/command6.c.
	* battlestar/com7.c: Rename to battlestar/command7.c.
	From NetBSD CVS.
	* exec.objs: Update.
	* battlestar/Makefile.bsd, battlestar/command1.c,
	battlestar/command2.c, battlestar/command3.c,
	battlestar/command4.c, battlestar/command5.c,